--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "@adonisjs/ignitor": "^2.0.8",
     "@adonisjs/lucid": "^6.1.3",
     "@adonisjs/session": "^1.0.27",
-    "@adonisjs/shield": "^1.0.8"
+    "@adonisjs/shield": "^1.0.8",
+    "@adonisjs/validator": "^5.0.6",
+    "mysql": "^2.18.1",
+    "pg": "^7.18.1"
   },
   "devDependencies": {},
   "autoload": {
